--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Luiz Felipe Marques</title>
 </head>
 <body>
-	Hello world. I'm under construction. Meanwhile, check my repositories at <a href="https://github.com/luizanao/l">Github</a> | <a href="https://bitbucket.org/luizfelipemarques/">Bitbucket</a>. 
+<!--   ___   _      ___         _____   __  __ __   ___    ___   _         
+ A   \ | |    |   \       / ___/  /  ]|  |  | /   \  /   \ | |        
+|     || |    |    \     (   \_  /  / |  |  ||     ||     || |        
+|  O  || |___ |  D  |     \__  |/  /  |  _  ||  O  ||  O  || |___     
+|     ||     ||     |     /  \ /   \_ |  |  ||     ||     ||     |    
+|     ||     ||     |     \    \     ||  |  ||     ||     ||     |    
+ \___/ |_____||_____|      \___|\____||__|__| \___/  \___/ |_____|    
+__________________________________________________________________
+iF YOU GOT HERE, PROBABLY YOU'R REALLY COURIOUS.
+CONTACT ME AND QUESTION DIRECTLY TO ME.
+-->
+ <center>
+	<h1>Hello world</h1>
+	<p>I'm under construction.</p>
+	<p>Meanwhile, check my repositories at <a href="https://github.com/luizanao/">Github</a> | <a href="https://bitbucket.org/luizfelipemarques/">Bitbucket</a>.</p>
+
+	Just as my life has taught me:
+	<blockquote cite="https://www.python.org/">
+	<b>&quot;Smooth seas do not make skillful sailors&quot;</b>
+	</blockquote>
+
+	<hr>
+	contact: <a href="mailto:luizfelipe.unesp@gmail.com">luizfelipe.unesp@gmail.com</a>
+</center>
 </body>
 </html>
