added json resume

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ CONTACT ME AND QUESTION DIRECTLY TO ME.
 -->
  <center>
 	<h1>Hello world</h1>
-	<p>I'm under construction.</p>
-	<p>Meanwhile, check my repositories at <a href="https://github.com/luizanao/">Github</a> | <a href="https://bitbucket.org/luizfelipemarques/">Bitbucket</a>.</p>
+	<p>I'm just a Vanilla Website</p>
+	<p>Meanwhile, check my CV/repositories at <a href="cv.html">CV</a> | <a href="https://github.com/luizanao/">Github</a> | <a href="https://bitbucket.org/luizfelipemarques/">Bitbucket</a>.</p>
 
 	Just as my life has taught me:
 	<blockquote cite="https://www.python.org/">
